--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fuelphp/upload": "2.0.7"
     },
     "require-dev": {
-        "fuel/docs": "dev-1.9/develop"
+        "fuel/docs": "dev-1.9/develop",
+        "phpunit/phpunit": "^10"
     },
     "suggest": {
         "dwoo/dwoo" : "Allow Dwoo templating with the Parser package",
@@ -28,7 +29,10 @@
         "zordius/lightncandy": "Allow Handlebars templating with an extremely fast PHP implementation of handlebars"
     },
     "config": {
-        "vendor-dir": "fuel/vendor"
+        "vendor-dir": "fuel/vendor",
+        "allow-plugins": {
+            "composer/installers": true
+        }
     },
     "extra": {
         "installer-paths": {
