--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,22 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      db:
+        image: mysql:8
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_DATABASE: fuel_test
+          MYSQL_USER: fuel_app
+          MYSQL_PASSWORD: super_secret_password
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
+
     steps:
     - name: Set up locale
       run: |
@@ -32,7 +48,16 @@ jobs:
     - name: Apply patch
       run: patch -p1 < a.patch
 
+    - name: Wait for MySQL to be ready
+      run: |
+        until mysqladmin ping -h"127.0.0.1" --silent; do
+          echo "Waiting for database connection..."
+          sleep 2
+        done
+
     - name: Run test suite
+      env:
+        DB_HOST: 127.0.0.1
       run: fuel/vendor/bin/phpunit -c fuel/core/phpunit.xml --group Core --coverage-html coverage
 
     - name: Upload coverage
